sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  name: frigate
  namespace: frigate
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: frigate
      app.kubernetes.io/name: frigate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: frigate
        app.kubernetes.io/name: frigate
    spec:
      containers:
        -
          #image: ghcr.io/blakeblackshear/frigate:0.17.2
          image: ghcr.io/dalmura/frigate:v0.17.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
          name: frigate
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
            - containerPort: 8971
              name: http-auth
              protocol: TCP
            - containerPort: 1935
              name: rtmp
              protocol: TCP
            - containerPort: 8554
              name: rtsp
              protocol: TCP
            - containerPort: 8555
              name: webrtc-udp
              protocol: UDP
            - containerPort: 8555
              name: webrtc-tcp
              protocol: TCP
            - containerPort: 1984
              name: go2rtc-admin
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 500m
              memory: 1.5Gi
          securityContext:
            # Required for hailo0 access
            privileged: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: footage
              subPath: frigate
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /tmp
              name: tmp
            - mountPath: /dev/hailo0
              name: h8l
            - mountPath: /usr/local/nginx/conf/proxy_trusted_headers.conf
              name: proxy-config
              subPath: proxy_trusted_headers.conf
      nodeSelector:
        k8s.dalmura.cloud/nodegroup: eq14-worker-pool
      volumes:
        - configMap:
            name: frigate
          name: configmap
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config
        - name: footage
          nfs:
            server: atlas.wlanding.dalmura.com.au
            path: /misc
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: dshm
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: tmp
        - hostPath:
            path: /dev/hailo0
          name: h8l
        - configMap:
            name: proxy-trusted-headers
          name: proxy-config
