sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/frigate/deployment_overlay.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frigate
spec:
  template:
    spec:
      containers:
        - name: frigate
          volumeMounts:
            - name: configmap
              $patch: delete
