sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/frigate/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate
  namespace: frigate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frigate
      app.kubernetes.io/instance: frigate
  ingress:
    # Allow traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8971"
              protocol: TCP

    # Allow traffic from Home Assistant (Integration)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-assistant
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow connections to cameras on the IOT VLANs
    - toCIDR:
        - 192.168.78.0/25   # IOT_INTERNET
        - 192.168.78.128/25 # IOT_RESTRICTED
      toPorts:
        - ports:
            - port: "554"
              protocol: TCP
            - port: "8554"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow egress to Mosquitto MQTT
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # Allow connections to external services
    - toFQDNs:
        - matchName: "huggingface.co"
        - matchName: "api.github.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
